--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
             <div class="first-section-content container">
                 <h1 class="slogan">Train Hard<br>Train Smart<br>Train with Us</h1>
                 <h3 class="sub-slogan">Transform your body in 3 months, act now!</h3>
-                <button class="button-usual text-large-bold">Consultation</button>
+                <button id="consultation-btn" class="button-usual text-large-bold">Consultation</button>
+            </div>
+
+            <!-- Popup -->
+            <div id="contactPopup" class="text-small-regular">
+                <button id="close-contact-popup" class="image-button"></button>
+                <p class="text-small-regular">Thank you for your interest, you can contact us in the following ways:</p>
+                <p><span class="text-small-bold">tel:</span> +380 (096) XXX XX XX</p>
+                <p><span class="text-small-bold">e-mail:</span> iron.zone.sport@gmail.com</p>
+                <p><span class="text-small-bold">inst:</span> iron_z_zone</p>
             </div>
 
         </header>
@@ -56,7 +65,7 @@
         <main>
 
            <!--Section Who we are-->
-           <section class="container section-gap">
+           <section id="about-us" class="container section-gap">
                 <h2 class="title">Who we are?</h2>
 
                 <div class="carousel-container">
@@ -116,7 +125,7 @@
            </section>
 
            <!--Section Our Services-->
-           <section class="container section-gap">
+           <section id="services" class="container section-gap">
                 <h2 class="title">Our services</h2>
 
                 <div class="services_wrapper">
@@ -177,7 +186,7 @@
            </section>
 
            <!--Section Top trainers-->
-           <section class="container section-gap">
+           <section id="trainers" class="container section-gap">
                 <h2 class="title">Top trainers</h2>
 
                 <div class="trainer-block text-color-white">
@@ -230,7 +239,7 @@
            </section>
 
             <!--Section Prices-->
-            <section class="container section-gap text-color-white">
+            <section id="prices" class="container section-gap text-color-white">
                 <h2 class="title">Prices</h2>
                 <div class="center-paragraphs text-usual-regular">
                     <p>ATTENTION!<br>Coach services are paid separately depending on the consultation</p>
@@ -311,10 +320,10 @@
             </section>
 
             <!--Section Fast Communication-->
-            <section class="container section-gap text-color-white">
+            <section id="contacts" class="container section-gap text-color-white">
                 <h2 class="title">Fast communication</h2>
 
-                <form action="#" method="post" class="contact-form text-usual-regular">
+                <form id="contactForm" class="contact-form text-usual-regular">
                     <!-- Name -->
                     <div class="form-group">
                         <label for="name">Your name</label>
@@ -338,11 +347,17 @@
                         <button type="submit" class="button-small text-small-bold">Send</button>
                     </div>
                 </form>
+
+                <!-- Popup -->
+                <div id="successPopup">
+                    <button id="close-popup" class="image-button"></button>
+                    <p class="text-small-regular">Thank you for your feedback, your message has been successfully sent!</p>
+                </div>
             </section>
         </main>
 
         <!--FOOTER-->
-        <footer class="section-gap text-color-white">
+        <footer class="text-color-white">
             <div class="container text-small-regular">
                 <p><span class="text-small-bold">tel:</span> +380 (096) XXX XX XX</p>
                 <p><span class="text-small-bold">e-mail:</span> iron.zone.sport@gmail.com</p>
